2003-02-07  Martin Willers <willers@xm-arts.de>
	- fixed inserting of new items into listview
	- simplified layout in config-window
	- fixed sizing of labels in config-window
	(patches provided by Daniel Teske <teske@bigfoot.com>)

2003-01-07  Martin Willers <willers@xm-arts.de>
	- fixed destructor of class toplevel
	- finally avoiding stretching of buttons in config-dialog
	(patches provided by Daniel Teske <teske@bigfoot.com>)

2003-01-02  Martin Willers <willers@xm-arts.de>
	- configuration dialog now selects first tea available
	- small optimization in TopLevel::teaSelected()
	- when a tea is brewing, more menu entries are now disabled
	(patches provided by Daniel Teske <teske@bigfoot.com>)

2002-07-14  Martin Willers <willers@xm-arts.de>
	- KPassivePopup now stays on-screen until acknowlegded by mouse-click
	- now saving state of actionEnable to config

2002-06-23  Matthias Hoelzer-Kluepfel <mhk@kde.org>
	- added left-click menu while steeping
        - gave focus to name edit when a new tea is added
	- now unable to start steeping if no teas exist
	- added a QCheckBox to enable/disable the action field
	- made text in the name edit field right-justified
	(patch provided by Jackson Dunstan <jdunstan@digipen.edu>)

2002-06-20  Matthias Hoelzer-Kluepfel <mhk@kde.org>
	- improved the display of times in the menu
	  (patch provided by -Jackson Dunstan <jdunstan@digipen.edu>)
	  
2002-04-20  Martin Willers <willers@xm-arts.de>
	- also displaying name of current tea when finished

2002-04-20  Martin Willers <willers@xm-arts.de>
	- now displaying name of current tea in tooltip
	- better removing of unused tea-entries from config
	- some cleanups

2002-04-18  Martin Willers <willers@xm-arts.de>
	- when saving config, non-used old tea-entries are now deleted from config

2002-04-10  Martin Willers <willers@xm-arts.de>
	- Bugfix: when tea was finished, click on icon -> icon ok, but
	  tooltip was still "tea finished"