@@ -2,6 +2,7 @@
 	- fixed inserting of new items into listview
 	- simplified layout in config-window
 	- fixed sizing of labels in config-window
+	- using QValueVector instead of a QStringList for teas
 	(patches provided by Daniel Teske <teske@bigfoot.com>)
 
 2003-01-07  Martin Willers <willers@xm-arts.de>
